--- a/NoProjects/index.html
+++ b/NoProjects/index.html
@@ -7,9 +7,9 @@
 </head>
 <body class="body">
   <div class="wrapper no-projects">
-    <div class="plug no-projects-container">
+    <div class="plug no-projects__container">
       <p>Не создан ни один проект</p>
-      <button class="button no-projects-container__button" type="button">Добавить</button>
+      <button class="button" type="button">Добавить</button>
     </div>
   </div>
 </body>
