--- a/NoTasks/index.html
+++ b/NoTasks/index.html
@@ -6,8 +6,8 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body class="body">
-  <div class="no-tasks wrapper">
-    <div class="no-tasks-container plug">
+  <div class="wrapper no-tasks">
+    <div class="plug">
       <p>Ни одна задача не соответствует результатам поиска/фильтрации</p>
     </div>
   </div>
